--- a/development.cfg
+++ b/development.cfg
@@ -2,3 +2,9 @@
 extends =
     test-plone-4.3.x.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
+
+
+[instance]
+eggs +=
+    collective.quickupload
+    ftw.workspace
