Add version pinning for node.
Node version 1.0 only works with plone 5.

--- a/test-plone-4.3.x.cfg
+++ b/test-plone-4.3.x.cfg
@@ -8,3 +8,7 @@ package-name = ftw.activity
 
 [test]
 eggs += ftw.activity [plone4_test]
+
+[versions]
+# node version 1.0 is only compatible with plone 5
+node = <1.0
