--- a/test-plone-5.1.x.cfg
+++ b/test-plone-5.1.x.cfg
@@ -3,3 +3,7 @@ extends =
     https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-5.1.x.cfg
 
 package-name = ftw.activity
+
+[versions]
+# node version 1.0 is only compatible with plone 5
+node = <1.0
